completed nav and banner area

--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="" type="image/x-icon">
   <title>Gamer Zone</title>
+  <!-- font awesome cdn link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/gamer.css">
+
 </head>
+
 <body>
-  
+
+  <!-- header area starts here -->
+  <header>
+    <nav class="nav-logo-area">
+      <div class="nav-logo-container">
+        <div class="logo-container">
+          <img class="logo-image" src="images/Frame.png" alt="">
+          <h3><span class="logo-g">G</span>amer</h3>
+        </div>
+        <div class="nav-container">
+          <a href="">About Us</a>
+          <a href="">Developers</a>
+          <div class="nav-social-container">
+            <p>Follow Us On</p>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- Banner area starts here -->
+
+    <section class="banner-area">
+      <div class="banner-area-container">
+        <div class="banner-text-container">
+          <div class="banner-text-unit">
+            <h1 class="title-bk-text" style="text-transform: uppercase;">Play Like The</h1>
+            <h2 class="banner-heading">G.O.A.T.</h2>
+            <p><i class="fa-solid fa-play"></i> 1-Click instant play</p>
+            <p><i class="fa-solid fa-download"></i> No Download</p>
+            <p><i class="fa-solid fa-user-group"></i></i> 11000s of supported online games</p>
+            <button class="btn-primary">Sign in</button>
+            <button class="btn-blue">Go Rogue</button>
+          </div>
+        </div>
+        <div class="banner-image-container">
+          <img src="images/Group 18.png" alt="">
+        </div>
+      </div>
+    </section>                                
+    <!-- Banner area ends here -->
+  </header>
+  <!-- header area ends here -->
+
+  <!-- main area starts here -->
+  <main></main>
+  <!-- main area ends here -->
+
+  <!-- footer area starts here -->
+  <footer></footer>
+  <!-- footer area ends here -->
+
 </body>
+
 </html>
