comleted play instantly area

--- a/index.html
+++ b/index.html
@@ -64,7 +64,88 @@
   <!-- header area ends here -->
 
   <!-- main area starts here -->
-  <main></main>
+  <main>
+    <!-- online games section -->
+    <section class="online-games-area">
+      <h3 class="title-bk-text">Online Games <span class="title-gradient-text">Funny Videos</span></h3>
+      <p class="description-text">A Collection of Hilarious Videos to Brighten Your Day</p>
+      <div class="card-container">
+        <div class="card">
+          <img src="images/Rectangle 4.png" alt="">
+          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="card">
+          <img src="images/Rectangle 5.png" alt="">
+          <p>Did you score? #unblockedgames #school</p>
+        </div>
+        <div class="card">
+          <img src="images/Rectangle 7.png" alt="">
+          <p>Breaking game records like OG</p>
+        </div>
+        <div class="card">
+          <img src="images/Rectangle 6.png" alt="">
+          <p>Busted gaming on school laptop, but you are still lit.</p>
+        </div>
+      </div>
+    </section> 
+
+    <!-- Play instantly area -->
+    <section class="play-instantly-container">
+      <div class="instantly-text-container">
+        <div class="play-instantly-text">
+          <h3 class="title-bk-text"> <span class="title-gradient-text">Play Instantly,</span><br>
+            No Downloads <br>
+            No Installs.</h3>
+          <p class="description-text">Play games online for free without downloading. Just click the Play button and play
+            instantly in your browser.</p>
+        </div>
+      </div>
+      <div class="play-instantly-image">
+        <img class="parent-image" src="images/Rectangle 55.png" alt="">
+        <img class="child-image" src="images/Rectangle 66.png" alt="">
+      </div>
+    </section>
+
+    <!-- game type area -->
+    <section class="game-type-container">
+      <div class="type-button-container one">
+        <img src="images/Rectangle 11.png" alt="" class="button-image">
+        <h4 class="button-title">Action Games</h4>
+      </div>
+      <div class="type-button-container two">
+        <img src="images/Rectangle 12.png" alt="" class="button-image">
+        <h4 class="button-title">Adventure Games</h4>
+      </div>
+      <div class="type-button-container three">
+        <img src="images/Rectangle 13.png" alt="" class="button-image">
+        <h4 class="button-title">Arcade Games</h4>
+      </div>
+      <div class="type-button-container four">
+        <img src="images/Rectangle 14.png" alt="" class="button-image">
+        <h4 class="button-title">Educational Games         </h4>
+      </div>
+      <div class="type-button-container five">
+        <img src="images/Rectangle 15.png" alt="" class="button-image">
+        <h4 class="button-title">Word Games</h4>
+      </div>
+      <div class="type-button-container six">
+        <img src="images/Rectangle 16.png" alt="" class="button-image">
+        <h4 class="button-title">Role Palying Games</h4>
+      </div>
+      <div class="type-button-container seven">
+        <img src="images/Rectangle 17.png" alt="" class="button-image">
+        <h4 class="button-title">Music & Audio Games</h4>
+      </div>
+      <div class="type-button-container eight">
+        <img src="images/Rectangle 18.png" alt="" class="button-image">
+        <h4 class="button-title">Puzzle Games</h4>
+      </div>
+      <div class="type-button-container nine">
+        <img src="images/Rectangle 19.png" alt="" class="button-image">
+        <h4 class="button-title">Strategy Games</h4>
+      </div>
+    </section>
+  </main>
   <!-- main area ends here -->
 
   <!-- footer area starts here -->
