finished to buttons area

--- a/index.html
+++ b/index.html
@@ -107,42 +107,44 @@
     </section>
 
     <!-- game type area -->
-    <section class="game-type-container">
-      <div class="type-button-container one">
-        <img src="images/Rectangle 11.png" alt="" class="button-image">
-        <h4 class="button-title">Action Games</h4>
-      </div>
-      <div class="type-button-container two">
-        <img src="images/Rectangle 12.png" alt="" class="button-image">
-        <h4 class="button-title">Adventure Games</h4>
-      </div>
-      <div class="type-button-container three">
-        <img src="images/Rectangle 13.png" alt="" class="button-image">
-        <h4 class="button-title">Arcade Games</h4>
-      </div>
-      <div class="type-button-container four">
-        <img src="images/Rectangle 14.png" alt="" class="button-image">
-        <h4 class="button-title">Educational Games         </h4>
-      </div>
-      <div class="type-button-container five">
-        <img src="images/Rectangle 15.png" alt="" class="button-image">
-        <h4 class="button-title">Word Games</h4>
-      </div>
-      <div class="type-button-container six">
-        <img src="images/Rectangle 16.png" alt="" class="button-image">
-        <h4 class="button-title">Role Palying Games</h4>
-      </div>
-      <div class="type-button-container seven">
-        <img src="images/Rectangle 17.png" alt="" class="button-image">
-        <h4 class="button-title">Music & Audio Games</h4>
-      </div>
-      <div class="type-button-container eight">
-        <img src="images/Rectangle 18.png" alt="" class="button-image">
-        <h4 class="button-title">Puzzle Games</h4>
-      </div>
-      <div class="type-button-container nine">
-        <img src="images/Rectangle 19.png" alt="" class="button-image">
-        <h4 class="button-title">Strategy Games</h4>
+      <div class="game-type-area">
+        <section class="game-type-container">
+          <div class="type-button-container one">
+            <img src="images/Rectangle 11.png" alt="" class="button-image">
+            <h4 class="button-title">Action Games</h4>
+          </div>
+          <div class="type-button-container two">
+            <img src="images/Rectangle 12.png" alt="" class="button-image">
+            <h4 class="button-title">Adventure Games</h4>
+          </div>
+          <div class="type-button-container three">
+            <img src="images/Rectangle 13.png" alt="" class="button-image">
+            <h4 class="button-title">Arcade Games</h4>
+          </div>
+          <div class="type-button-container four">
+            <img src="images/Rectangle 14.png" alt="" class="button-image">
+            <h4 class="button-title">Educational Games </h4>
+          </div>
+          <div class="type-button-container five">
+            <img src="images/Rectangle 15.png" alt="" class="button-image">
+            <h4 class="button-title">Word Games</h4>
+          </div>
+          <div class="type-button-container six">
+            <img src="images/Rectangle 16.png" alt="" class="button-image">
+            <h4 class="button-title">Role Palying Games</h4>
+          </div>
+          <div class="type-button-container seven">
+            <img src="images/Rectangle 17.png" alt="" class="button-image">
+            <h4 class="button-title">Music & Audio Games</h4>
+          </div>
+          <div class="type-button-container eight">
+            <img src="images/Rectangle 18.png" alt="" class="button-image">
+            <h4 class="button-title">Puzzle Games</h4>
+          </div>
+          <div class="type-button-container nine">
+            <img src="images/Rectangle 19.png" alt="" class="button-image">
+            <h4 class="button-title">Strategy Games</h4>
+          </div>
       </div>
     </section>
   </main>
