--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="nav-logo-container">
         <div class="logo-container">
           <img class="logo-image" src="images/Frame.png" alt="">
-          <h3><span class="logo-g">G</span>amer</h3>
+          <h3 class="logo-text"><span class="logo-g">G</span>amer</h3>
         </div>
         <div class="nav-container">
           <a href="">About Us</a>
@@ -151,7 +151,37 @@
   <!-- main area ends here -->
 
   <!-- footer area starts here -->
-  <footer></footer>
+  <footer class="footer-area">
+   <div class="footer-area-container">
+    <div class="logo-container footer-logo">
+      <img class="logo-image" src="images/Frame.png" alt="">
+      <h3 class="footer-logo-text"> <span class="logo-g">G</span>amer</h3>
+    </div>
+    <div class="link-container">
+      <a href="">Our Story</a>
+      <a href="">Games</a>
+      <a href="">Web Games</a>
+      <a href="">Careers</a>
+      <a href="">Support</a>
+      <a href="">Account</a>
+    </div>
+    <div class="footer-social-container">
+      <a href=""><i class="fa-brands fa-twitter"></i></a>
+      <a href=""><i class="fa-brands fa-facebook"></i></a>
+      <a href=""><i class="fa-brands fa-youtube"></i></a>
+      <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+      <a href=""><i class="fa-brands fa-instagram"></i></a>
+      <a href=""><i class="fa-brands fa-apple"></i></a>
+    </div>
+    <div class="policy-container">
+      <a href="">Terms and Conditions</a>
+      <a href="">Privacy Policy</a>
+      <a href="">Cookie Policy</a>
+      <a href="">Privacy Settings</a>
+    </div>
+    <p class="copyright-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+    </footer>
+   </div>
   <!-- footer area ends here -->
 
 </body>
