--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <title>Gamer Zone</title>
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <title>Gamer</title>
   <!-- font awesome cdn link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -71,19 +71,39 @@
       <p class="description-text">A Collection of Hilarious Videos to Brighten Your Day</p>
       <div class="card-container">
         <div class="card">
+         <div class="card-image">
           <img src="images/Rectangle 4.png" alt="">
+          <div class="card-overlay">
+              <a href=""><i class="fa-solid fa-circle-play"></i></a>
+          </div>
+         </div>
           <p>No Download. No Installs. Play games Instantly on Gamer.</p>
         </div>
         <div class="card">
-          <img src="images/Rectangle 5.png" alt="">
+          <div class="card-image">
+            <img src="images/Rectangle 5.png" alt="">
+            <div class="card-overlay">
+              <a href=""><i class="fa-solid fa-circle-play"></i></a>
+            </div>
+          </div>
           <p>Did you score? #unblockedgames #school</p>
         </div>
         <div class="card">
-          <img src="images/Rectangle 7.png" alt="">
+            <div class="card-image">
+              <img src="images/Rectangle 7.png" alt="">
+              <div class="card-overlay">
+                <a href=""><i class="fa-solid fa-circle-play"></i></a>
+              </div>
+            </div>
           <p>Breaking game records like OG</p>
         </div>
         <div class="card">
-          <img src="images/Rectangle 6.png" alt="">
+          <div class="card-image">
+            <img src="images/Rectangle 6.png" alt="">
+            <div class="card-overlay">
+              <a href=""><i class="fa-solid fa-circle-play"></i></a>
+            </div>
+          </div>
           <p>Busted gaming on school laptop, but you are still lit.</p>
         </div>
       </div>
@@ -167,8 +187,14 @@
     </div>
     <div class="footer-social-container">
       <a href=""><i class="fa-brands fa-twitter"></i></a>
-      <a href=""><i class="fa-brands fa-facebook"></i></a>
-      <a href=""><i class="fa-brands fa-youtube"></i></a>
+      <div class="facebook">
+        <i class="fa-solid fa-circle"></i>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+      </div>
+      <div class="youtube">
+        <i class="fa-solid fa-circle"></i>
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+      </div>
       <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
       <a href=""><i class="fa-brands fa-instagram"></i></a>
       <a href=""><i class="fa-brands fa-apple"></i></a>
