finishe main mark part

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           <img src="images/Rectangle 4.png" alt="">
           <div class="card-overlay">
               <a href=""><i class="fa-solid fa-circle-play"></i></a>
+                <h5 class="overlay-text">Watch Now</h5>
           </div>
          </div>
           <p>No Download. No Installs. Play games Instantly on Gamer.</p>
@@ -84,6 +85,7 @@
             <img src="images/Rectangle 5.png" alt="">
             <div class="card-overlay">
               <a href=""><i class="fa-solid fa-circle-play"></i></a>
+                <h5 class="overlay-text">Watch Now</h5>
             </div>
           </div>
           <p>Did you score? #unblockedgames #school</p>
@@ -93,6 +95,7 @@
               <img src="images/Rectangle 7.png" alt="">
               <div class="card-overlay">
                 <a href=""><i class="fa-solid fa-circle-play"></i></a>
+                <h5 class="overlay-text">Watch Now</h5>
               </div>
             </div>
           <p>Breaking game records like OG</p>
@@ -102,6 +105,7 @@
             <img src="images/Rectangle 6.png" alt="">
             <div class="card-overlay">
               <a href=""><i class="fa-solid fa-circle-play"></i></a>
+              <h5 class="overlay-text">Watch Now</h5>
             </div>
           </div>
           <p>Busted gaming on school laptop, but you are still lit.</p>
