responsive to the play instant area

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- main area starts here -->
   <main>
     <!-- online games section -->
-    <section class="online-games-area hide">
+    <section class="online-games-area">
       <h3 class="title-bk-text">Online Games <span class="title-gradient-text">Funny Videos</span></h3>
       <p class="description-text">A Collection of Hilarious Videos to Brighten Your Day</p>
       <div class="card-container">
@@ -117,7 +117,7 @@
     </section> 
 
     <!-- Play instantly area -->
-    <section class="play-instantly-container hide">
+    <section class="play-instantly-container">
       <div class="instantly-text-container">
         <div class="play-instantly-text">
           <h3 class="title-bk-text"> <span class="title-gradient-text">Play Instantly,</span><br>
