--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </section>
 
     <!-- game type area -->
-      <div class="game-type-area hide">
+      <div class="game-type-area">
         <section class="game-type-container">
           <div class="type-button-container one">
             <img src="images/Rectangle 11.png" alt="" class="button-image">
@@ -178,11 +178,13 @@
   <!-- main area ends here -->
 
   <!-- footer area starts here -->
-  <footer class="footer-area hide">
+  <footer class="footer-area">
    <div class="footer-area-container">
-    <div class="logo-container footer-logo">
-      <img class="logo-image" src="images/Frame.png" alt="">
-      <h3 class="footer-logo-text"> <span class="logo-g">G</span>amer</h3>
+    <div class="footer-logo">
+      <div class="logo-container">
+        <img class="logo-image" src="images/Frame.png" alt="">
+        <h3 class="footer-logo-text"> <span class="logo-g">G</span>amer</h3>
+      </div>
     </div>
     <div class="link-container">
       <a href="">Our Story</a>
