--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon -->
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <title>Gamer</title>
   <!-- font awesome cdn link -->
